--- a/index.html
+++ b/index.html
@@ -8,19 +8,10 @@
 
 <body style="background-color:powderblue;">
 
-<form action="" method="get">
-<center>Name: <input type="text" style="font-size:16pt;" name="song"></center>
-<center><input type="checkbox" id="download" name="download" value="true">
-<label for="download">Direct download</label><br></center><br>
-<center><input type="submit" style="font-size:15px;" ></center>
-</form>
 
-<h2><center><?php echo $name;?></center></h2>
-<center><img src="<?php echo $image;?>" alt="Image" width="400" height="400"></center>
+<h2><center>Akki Universe</center></h2>
+<center><img src="https://i.ibb.co/rxKBbR7/Whats-App-Image-2021-11-22-at-2-31-40-AM.jpg" alt="Image" width="400" height="400"></center>
 
-<center><audio controls>
- <source src="<?php echo $final; ?>" type="audio/mp4">
-</audio>
-</center>
+
 </body>
 </html>
