--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title><?php echo $name;?></title>
 </head>
 
-<body style="background-color:powderblue;">
+<body style="background-color:#F5E125;">
 
 
 <h2><center>Akki Universe</center></h2>
