--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body style="background-color:#F5E125;">
 
-
+<h1><marquee behavior="scroll" direction="left">Akki Universe</marquee></h1>
 <h2><center>Akki Universe</center></h2>
 <center><img src="https://i.ibb.co/rxKBbR7/Whats-App-Image-2021-11-22-at-2-31-40-AM.jpg" alt="Image" width="350" height="430"></center>
 
