--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 
 <body style="background-color:#F5E125;">
 
-<h1><marquee behavior="scroll" direction="left">Akki Universe</marquee></h1>
-<center><img src="https://i.ibb.co/rxKBbR7/Whats-App-Image-2021-11-22-at-2-31-40-AM.jpg" alt="Image" width="350" height="430"></center>
     
-<center><marquee behavior="slide" direction="left">
+<center><marquee behavior="scroll" direction="left">
 <img src="https://i.ibb.co/rxKBbR7/Whats-App-Image-2021-11-22-at-2-31-40-AM.jpg" width="350" height="430" alt="imgg">
 <img src="https://i.ibb.co/6X2jnZH/Whats-App-Image-2021-11-22-at-2-52-05-AM.jpg" width="350" height="430" alt="imgg">
     </marquee></center>
