--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="background-color:#F5E125;">
 
     
-<center><marquee behavior="scroll" direction="left">
+<center><marquee behavior="scroll" direction="right">
 <img src="https://i.ibb.co/rxKBbR7/Whats-App-Image-2021-11-22-at-2-31-40-AM.jpg" width="350" height="430" alt="imgg">
 <img src="https://i.ibb.co/6X2jnZH/Whats-App-Image-2021-11-22-at-2-52-05-AM.jpg" width="350" height="430" alt="imgg">
     </marquee></center>
