--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><?php echo $name;?></title>
 </head>
-
 <body style="background-color:#F5E125;">
 
-<h1><marquee behavior="scroll" direction="left">Akki Universe</marquee></h1>
+<h1><marquee behavior="scroll" direction="left">😎😎 ॐA×K×K×Iॐ 😎😎</marquee></h1>
     <hr><hr><br>
     
 <center><marquee behavior="scroll" direction="right">
