--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color:#F5E125;">
 
-<h1><marquee behavior="scroll" direction="left">😎😎 ॐA×K×K×Iॐ 😎😎</marquee></h1>
+<h1><marquee behavior="scroll" direction="left">🔱🔱 ॐA×K×K×Iॐ 🔱🔱</marquee></h1>
     <hr><hr><br>
     
 <center><marquee behavior="scroll" direction="right">
